== 1.1.0 (to be released)

* enhancements
  * Rememberable module allows user to be remembered across browsers and is enabled by default (by github.com/trevorturk)
  * devise_for can now be used together with scope method in routes but with a few limitations (check the documentation)
  * Support :as or :devise_scope in the router to specify controller access scope

* bug fix
  * Fix a bug in Devise::TestHelpers where current_user was returning a Response object for non active accounts
  * Devise should respect script_name and path_info contracts
  * Fix a bug when accessing a path with (.:format) (by github.com/klacointe)

* deprecations
  * use_default_scope is deprecated and has no effect. Use :as or :devise_scope in the router instead

== 1.1.rc2

* enhancements
  * Allow to set cookie domain for the remember token. (by github.com/mantas)
  * Added navigational formats to specify when it should return a 302 and when a 401.
  * Added authenticate(scope) support in routes (by github.com/wildchild)
  * Added after_update_path_for to registrations controller (by github.com/thedelchop)
  * Allow the mailer object to be replaced through config.mailer = "MyOwnMailer"

* bug fix
  * Fix a bug where session was timing out on sign out

* deprecations
  * bcrypt is now the default encryptor
  * devise.mailer.confirmations_instructions now should be devise.mailer.confirmations_instructions.subject
  * devise.mailer.user.confirmations_instructions now should be devise.mailer.confirmations_instructions.user_subject
  * Generators now use Rails 3 syntax (devise:install) instead of devise_install

== 1.1.rc1

* enhancements
  * Rails 3 compatibility
  * All controllers and views are namespaced, for example: Devise::SessionsController and "devise/sessions"
  * Devise.orm is deprecated. This reduces the required API to hook your ORM with devise
  * Use metal for failure app
  * HTML e-mails now have proper formatting
  * Allow to give :skip and :controllers in routes